[gd_scene load_steps=3 format=2]

[ext_resource path="res://ships/enemies/enemyUFO.gd" type="Script" id=1]
[ext_resource path="res://assets/PNG/ufoBlue.png" type="Texture" id=2]

[node name="enemyUFO" type="Area2D" groups=["damageable"]]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )
speed = 160

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -27, -36, -39, -25, -45, -10, -46, 5, -41, 20, -33, 32, -22, 41, -5, 45, 9, 45, 22, 40, 32, 32, 40, 21, 45, 8, 45, -4, 42, -16, 35, -28, 27, -36, 13, -43, 0, -45, -16, -43 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 23 )

[connection signal="area_entered" from="." to="." method="_on_enemyUFO_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
